--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   <div class="portfolio-item">
                     <img src="image/register.png" class="w-100 img-thumbnail" alt="">
                     <h3 class="text-capitalize fs-5 my-2">Register-Login-Logout</h3>
-                    <p class="mb-4"><a href="https://github.com/ilai-ilai/Register-Login-Logout-form.git" class="text-danger text-decoration-none">Register-Login-Logout</a></p>
+                    <p class="mb-4"><a href="https://github.com/ilai-ilai/Register-Login-Logout-form.git" class="text-danger text-decoration-none">Live Demo</a></p>
                   </div>
                 </div>
                 </div>
