--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="portfolio-item">
                   <img src="image/port.png" class="w-100 img-thumbnail" alt="">
                   <h3 class="text-capitalize fs-5 my-2">Portpolio</h3>
-                  <p class="mb-4"><a href="https://github.com/ilai-ilai/Portfolio/settings/pages" class="text-danger text-decoration-none">Live Demo</a></p>
+                  <p class="mb-4"><a href="#" class="text-danger text-decoration-none">Live Demo</a></p>
                 </div>
               </div>
               <div class="col-md-6 ">
