--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                       <p class="text-muted mb-1">Hello I'm</p>
                         <h1 class="fs-4">Ilaiyaraja M</h1>
                         <h2 class="text-danger text-uppercase fs-1 fw-bold">Web Developer</h2>
-                        <p class="mt-4 text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</p>
-                        <a href="./cv.pdf" download="download CV"><button class="btn btn-danger mt-3 px-3">Download CV</button></a>
+                        <p class="mt-4 text-muted">I Know Programming Languages Like HTML,CSS,Bootstrap,            JavaScript(basics),Django</p>
+                        <a href="./resume.pdf" download="download CV"><button class="btn btn-danger mt-3 px-3">Download CV</button></a>
                     </div>    
                 </div>
               </div>
@@ -61,10 +61,14 @@
         <div class="row">
           <div class="col">
               <div class="about-text text-center">
-                <h3 class="fs-4 mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h3>
-                <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                <h3 class="fs-4 mb-3">Hello, I’m Ilaiyaraja from Krishnagiri, Tamil Nadu.</h3>
+                <p class="text-muted"> I hold a Bachelor of Engineering in Electronics and Communication Engineering (ECE) from Annapoorana Engineering College, Salem.
+                  To enhance my programming skills, I completed a Python course at Easy Course, Salem. I have also self-learned Django, HTML, CSS, Bootstrap, and JavaScript (basics) through YouTube tutorials.
+                  I have good knowledge in Django web development and have built projects such as:
+                  MySQL-CRUD application
+                  Authentication-based Register and Login forms
+                  Model forms for dynamic data handling
+                  I possess strong knowledge of the Django web framework and enjoy building functional and interactive web applications.
               </p>
               </div>
               <div class="row mb-5">
